--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "compile": "npx hardhat compile",
     "clean:all": "rm -rf artifacts cache dist node_modules package-lock.json",
-    "deploy": "rm -rf artifacts cache; npm run test && npx hardhat run scripts/deploy.js --network rinkeby",
-    "mint": "npx hardhat run scripts/mint.js --network rinkeby",
-    "burn": "npx hardhat run scripts/burn.js --network rinkeby",
-    "transfer": "npx hardhat run scripts/transter.js --network rinkeby",
+    "deploy": "rm -rf artifacts cache; npx hardhat run scripts/deploy.js --network mainnet",
+    "mint": "npx hardhat run scripts/mint.js --network mainnet",
+    "burn": "npx hardhat run scripts/burn.js --network mainnet",
+    "transfer": "npx hardhat run scripts/transter.js --network mainnet",
     "test": "npx hardhat test",
     "start": "npx hardhat node",
     "verify": "node scripts/verify.js",
