--- a/package.json
+++ b/package.json
@@ -30,27 +30,34 @@
     "@nomiclabs/hardhat-etherscan": "^2.1.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^4.0.0",
+    "@reduxjs/toolkit": "^1.5.1",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
+    "classnames": "^2.3.1",
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.1.3",
     "hardhat": "^2.2.1",
     "node-fetch": "^2.6.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4"
   },
   "devDependencies": {
+    "@types/node": "^12.20.13",
     "@types/react": "^16.8.24",
     "@types/react-dom": "^16.0.5",
+    "@types/react-redux": "^7.1.16",
     "@types/webpack": "4.1.4",
     "copy-webpack-plugin": "^8.1.1",
     "css-loader": "^5.2.4",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
+    "is-empty-typed": "^1.0.0",
     "mini-css-extract-plugin": "^1.6.0",
     "prettier": "^2.3.0",
     "sass": "^1.32.13",
     "sass-loader": "^11.1.1",
+    "scss-reset": "^1.1.11",
     "style-loader": "^2.0.0",
     "ts-loader": "^9.2.0",
     "typescript": "^4.2.4",
