--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "node-fetch": "^2.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.4"
+    "react-redux": "^7.2.4",
+    "react-viewer": "^3.2.2"
   },
   "devDependencies": {
     "@types/node": "^12.20.13",
