--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
-    "react-viewer": "^3.2.2"
+    "react-viewer": "^3.2.2",
+    "scroll-lock": "^2.1.5"
   },
   "devDependencies": {
     "@types/node": "^12.20.13",
