--- a/package.json
+++ b/package.json
@@ -1,71 +1,70 @@
 {
-  "name": "nftcoffins",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "compile": "npx hardhat compile",
-    "clean:all": "rm -rf artifacts cache dist node_modules package-lock.json",
-    "deploy": "rm -rf artifacts cache; npx hardhat run scripts/deploy.js --network mainnet",
-    "mint": "npx hardhat run scripts/mint.js --network mainnet",
-    "burn": "npx hardhat run scripts/burn.js --network mainnet",
-    "transfer": "npx hardhat run scripts/transter.js --network mainnet",
-    "test": "npx hardhat test",
-    "start": "npx hardhat node",
-    "verify": "node scripts/verify.js",
-    "local:deploy": "npx hardhat run scripts/deploy.js --network localhost",
-    "local:mint": "npx hardhat run scripts/local/mint.local.js --network localhost",
-    "local:transfer": "npx hardhat run scripts/local/transfer.local.js --network localhost",
-    "build:client": "rm -rf dist; webpack --mode=production --node-env=production",
-    "build:alias": "cp CNAME dist/",
-    "build:api": "cp -r static/. dist/api",
-    "build": "npm run build:client && npm run build:alias && npm run build:api",
-    "serve": "webpack serve"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.2",
-    "@nomiclabs/hardhat-etherscan": "^2.1.2",
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@openzeppelin/contracts": "^4.0.0",
-    "@reduxjs/toolkit": "^1.5.1",
-    "chai": "^4.3.4",
-    "chai-as-promised": "^7.1.1",
-    "classnames": "^2.3.1",
-    "ethereum-waffle": "^3.3.0",
-    "ethers": "^5.1.3",
-    "hardhat": "^2.2.1",
-    "node-fetch": "^2.6.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.4",
-    "react-viewer": "^3.2.2",
-    "scroll-lock": "^2.1.5"
-  },
-  "devDependencies": {
-    "@types/node": "^12.20.13",
-    "@types/react": "^16.8.24",
-    "@types/react-dom": "^16.0.5",
-    "@types/react-redux": "^7.1.16",
-    "@types/webpack": "4.1.4",
-    "copy-webpack-plugin": "^8.1.1",
-    "css-loader": "^5.2.4",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.3.1",
-    "is-empty-typed": "^1.0.0",
-    "mini-css-extract-plugin": "^1.6.0",
-    "prettier": "^2.3.0",
-    "react-router-dom": "^5.2.0",
-    "sass": "^1.32.13",
-    "sass-loader": "^11.1.1",
-    "scss-reset": "^1.1.11",
-    "style-loader": "^2.0.0",
-    "ts-loader": "^9.2.0",
-    "typescript": "^4.2.4",
-    "webpack": "^5.37.0",
-    "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "^3.11.2"
-  }
+    "name": "nftcoffins",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "compile": "npx hardhat compile",
+        "clean:all": "rm -rf artifacts cache dist node_modules package-lock.json",
+        "deploy": "rm -rf artifacts cache; npx hardhat run scripts/deploy.js --network mainnet",
+        "mint": "npx hardhat run scripts/mint.js --network mainnet",
+        "burn": "npx hardhat run scripts/burn.js --network mainnet",
+        "transfer": "npx hardhat run scripts/transter.js --network mainnet",
+        "test": "npx hardhat test",
+        "start": "npx hardhat node",
+        "verify": "node scripts/verify.js",
+        "local:deploy": "npx hardhat run scripts/deploy.js --network localhost",
+        "local:mint": "npx hardhat run scripts/local/mint.local.js --network localhost",
+        "local:transfer": "npx hardhat run scripts/local/transfer.local.js --network localhost",
+        "build:client": "rm -rf dist; webpack --mode=production --node-env=production",
+        "build:alias": "cp CNAME dist/",
+        "build:api": "cp -r static/. dist/api",
+        "build": "npm run build:client && npm run build:alias && npm run build:api",
+        "serve": "webpack serve"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@nomiclabs/hardhat-ethers": "^2.0.2",
+        "@nomiclabs/hardhat-etherscan": "^2.1.2",
+        "@nomiclabs/hardhat-waffle": "^2.0.1",
+        "@openzeppelin/contracts": "^4.0.0",
+        "@reduxjs/toolkit": "^1.5.1",
+        "chai": "^4.3.4",
+        "chai-as-promised": "^7.1.1",
+        "classnames": "^2.3.1",
+        "ethereum-waffle": "^3.3.0",
+        "ethers": "^5.1.3",
+        "hardhat": "^2.2.1",
+        "node-fetch": "^2.6.1",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-modal-image": "^2.5.0",
+        "react-redux": "^7.2.4"
+    },
+    "devDependencies": {
+        "@types/node": "^12.20.13",
+        "@types/react": "^16.8.24",
+        "@types/react-dom": "^16.0.5",
+        "@types/react-redux": "^7.1.16",
+        "@types/webpack": "4.1.4",
+        "copy-webpack-plugin": "^8.1.1",
+        "css-loader": "^5.2.4",
+        "file-loader": "^6.2.0",
+        "html-webpack-plugin": "^5.3.1",
+        "is-empty-typed": "^1.0.0",
+        "mini-css-extract-plugin": "^1.6.0",
+        "prettier": "^2.3.0",
+        "react-router-dom": "^5.2.0",
+        "sass": "^1.32.13",
+        "sass-loader": "^11.1.1",
+        "scss-reset": "^1.1.11",
+        "style-loader": "^2.0.0",
+        "ts-loader": "^9.2.0",
+        "typescript": "^4.2.4",
+        "webpack": "^5.37.0",
+        "webpack-cli": "^4.7.0",
+        "webpack-dev-server": "^3.11.2"
+    }
 }
