--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-modal-image": "^2.5.0",
-        "react-redux": "^7.2.4"
+        "react-redux": "^7.2.4",
+        "react-router-hash-link": "^2.4.3"
     },
     "devDependencies": {
         "@types/node": "^12.20.13",
